[gd_scene load_steps=7 format=3 uid="uid://e6tdfuhgbnfu"]

[ext_resource type="Script" path="res://scenes/ui/stats_ui.gd" id="1_vpq11"]
[ext_resource type="Theme" uid="uid://b3eypke120vg0" path="res://custom_resources/main_theme.tres" id="2_a3vap"]
[ext_resource type="Texture2D" uid="uid://dfxkog0h2kxco" path="res://assets/graphics/coin 2.png" id="2_o2dhy"]
[ext_resource type="FontFile" uid="uid://dqupergg0uhxa" path="res://assets/fonts/Pirata_One/PirataOne-Regular.ttf" id="3_cwcld"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0a8it"]
load_path = "res://.godot/imported/pirate_items.jpg-0165868caddd8915c2a941cc0f272bfd.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_stsd2"]
atlas = SubResource("CompressedTexture2D_0a8it")
region = Rect2(603, 350, 154, 154)

[node name="StatsUI" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_right = 201.0
offset_bottom = 154.0
grow_horizontal = 2
theme_override_constants/separation = 100
script = ExtResource("1_vpq11")

[node name="Gold" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Gold"]
layout_mode = 2
texture = ExtResource("2_o2dhy")
expand_mode = 2

[node name="GoldLabel" type="Label" parent="Gold"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_a3vap")
theme_override_fonts/font = ExtResource("3_cwcld")
theme_override_font_sizes/font_size = 120
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Modifier" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModifierImage" type="TextureRect" parent="Modifier"]
layout_mode = 2
theme = ExtResource("2_a3vap")
texture = SubResource("AtlasTexture_stsd2")

[node name="ModifierLabel" type="Label" parent="Modifier"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_a3vap")
theme_override_fonts/font = ExtResource("3_cwcld")
theme_override_font_sizes/font_size = 120
text = "+6
"
horizontal_alignment = 1
vertical_alignment = 1
